[MAILWEB-1403] add onmobile-w33 helper / fixed onmobile-aligncenter

--- a/packages/styles/_sass/pm-styles/_pm-table.scss
+++ b/packages/styles/_sass/pm-styles/_pm-table.scss
@@ -27,6 +27,11 @@
 		&.alignright {
 			@extend .alignright;
 		}
+		@include respond-to($breakpoint-small) {
+			&.onmobile-aligncenter {
+				@extend .onmobile-aligncenter;
+			}
+		}
 	}
 
 	// no style for this case
