--- a/packages/styles/_sass/reusable-components/_design-system-responsive.scss
+++ b/packages/styles/_sass/reusable-components/_design-system-responsive.scss
@@ -201,6 +201,9 @@
     &w25{
       width: 25%;
 	}
+	&w33{
+      width: 33%;
+	}
 	&w100 {
       width: 100%;
     }
